# TextProject

./: CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: gtest.cmake
examples/: CMakeLists.txt  main.cpp
include/: wordcounter.h
src/: wordcounter.cpp
tests/: CMakeLists.txt  countTest.cpp
